@@ -1,5 +1,7 @@
 3.N.N  - NN.XXX-2013
 ====================
+- Changed the source from where the memory usage is collected in the 'squid'
+  graph. Now the values shown are more real and accurate.
 - Fixed a bug that prevented seeing the Core temperatures in the 'lmsens' graph.
 	(thanks to Bryan Guidroz, bryanguidroz AT hotmail.com for pointing this out)
 
